--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -3,4 +3,8 @@
     <string name="home">Home</string>
     <string name="garage">Garagem</string>
     <string name="profile">Perfil</string>
+    <string name="search">Pesquisar</string>
+    <string name="my_favorites">Meus favoriros</string>
+    <string name="make_announcement">Fazer anúncio</string>
+    <string name="my_annoucement">Meus anúncios</string>
 </resources>
